# ought

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  justfile  ought.toml
.claude/: launch.json
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
Formula/: ought.rb
crates/ought-analysis/: Cargo.toml  README.md
crates/ought-analysis/src/: audit.rs  (+5 more)
crates/ought-cli/: Cargo.toml  README.md
crates/ought-core/: README.md
crates/ought-gen/: Cargo.toml
crates/ought-gen/src/: agent.rs  align.rs  align_orchestrator.rs  align_tool_set.rs  align_tools.rs  config.rs  context.rs  error_detail.rs  extract_orchestrator.rs  generator.rs  lib.rs  manifest.rs  orchestrator.rs  terminal_events.rs  tool_set.rs  tools.rs
crates/ought-gen/src/providers/: claude.rs  custom.rs  mod.rs  ollama.rs  openai.rs
crates/ought-gen/tests/: generated_tests.rs
crates/ought-mcp/: Cargo.toml  README.md
crates/ought-report/: Cargo.toml
crates/ought-run/: Cargo.toml
crates/ought-server/: Cargo.toml
crates/ought-spec/: Cargo.toml
crates/ought-spec/src/: config.rs  graph.rs  lib.rs  parser.rs  types.rs
crates/ought-spec/src/parser/: clauses.rs  keywords.rs  state.rs
crates/ought-spec/tests/: generated_tests.rs  parser_test.rs  smoke_test.rs
docs/: design.md
docs/usage/: cli-reference.md  configuration.md  introduction.md  keywords.md  quickstart.md  writing-specs.md
ought/: ought.ought.md
ought/analysis/: analysis.ought.md
ought/cli/: cli.ought.md
ought/integration/: mcp.ought.md
ought/ought-gen/: manifest.toml
(+401 files in other folders)
